# mcp

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  GETTING_STARTED_MCP.md  README.md  docker-compose.yml  pyproject.toml  run_server.sh  run_sse.sh  run_sse_9001.sh
.claude/: settings.local.json
.claude/commands/: fix-issue.md  review-pr.md
.claude/skills/mariadb-debug/: SKILL.md
.github/: copilot-instructions.md
scripts/: populate_geography.py  test_mcp_client.py  test_mcp_geography.py
sql/: geography_views.sql
src/: config.py  custom_connection.py  embeddings.py  main.py  server.py
src/tests/: test_custom_resource.py  test_mariadb_mcp_tools.py  test_mcp_server.py  test_query_validation.py
