[project]
name = "mariadb-mcp"
version = "0.2.2"
description = "MariaDB MCP Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncmy>=0.2.10",
    "fastmcp[websockets]==2.12.1",
    "google-genai>=1.15.0",
    "openai>=1.78.1",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=4.1.0",
    "tokenizers==0.21.2",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["src/tests"]
